--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,7 @@
           src="img/harry-potter.jpg"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
+          alt="Harry Potter and the Half-Blood Prince"
         />
       </div>
 
@@ -82,6 +83,7 @@
           src="img/nobody.jpg"
           onclick="openModal();currentSlide(2)"
           class="hover-shadow"
+          alt="Nobody"
         />
       </div>
 
@@ -90,6 +92,7 @@
           src="img/black-widow.jpg"
           onclick="openModal();currentSlide(3)"
           class="hover-shadow"
+          alt="Black Widow"
         />
       </div>
 
@@ -98,6 +101,7 @@
           src="img/squid-game.jpg"
           onclick="openModal();currentSlide(4)"
           class="hover-shadow"
+          alt="Squid Game"
         />
       </div>
 
@@ -106,6 +110,7 @@
           src="img/joker.jpg"
           onclick="openModal();currentSlide(5)"
           class="hover-shadow"
+          alt="Joker"
         />
       </div>
     </div>
@@ -116,27 +121,35 @@
       <div class="modal-content">
         <div class="mySlides">
           <div class="numbertext">1 / 5</div>
-          <img src="img/harry-potter.jpg" style="width: 100%" />
+          <img
+            src="img/harry-potter.jpg"
+            style="width: 100%"
+            alt="Harry Potter and the Half-Blood Prince"
+          />
         </div>
 
         <div class="mySlides">
           <div class="numbertext">2 / 5</div>
-          <img src="img/nobody.jpg" style="width: 100%" />
+          <img src="img/nobody.jpg" style="width: 100%" alt="Nobody" />
         </div>
 
         <div class="mySlides">
           <div class="numbertext">3 / 5</div>
-          <img src="img/black-widow.jpg" style="width: 100%" />
+          <img
+            src="img/black-widow.jpg"
+            style="width: 100%"
+            alt="Black Widow"
+          />
         </div>
 
         <div class="mySlides">
           <div class="numbertext">4 / 5</div>
-          <img src="img/squid-game.jpg" style="width: 100%" />
+          <img src="img/squid-game.jpg" style="width: 100%" alt="Squid Game" />
         </div>
 
         <div class="mySlides">
           <div class="numbertext">5 / 5</div>
-          <img src="img/joker.jpg" style="width: 100%" />
+          <img src="img/joker.jpg" style="width: 100%" alt="Joker" />
         </div>
 
         <!-- Next / Previous -->
@@ -153,6 +166,7 @@
                 class="close"
                 src="img/cancel.png"
                 onclick="toggle('#nobody')"
+                alt="close-button"
               />
               <div class="popup-wrapper">
                 <video src="videos/Nobody.mp4" controls="true"></video>
@@ -200,7 +214,7 @@
             class="demo"
             src="img/harry-potter.jpg"
             onclick="currentSlide(1)"
-            alt="Harry Potter"
+            alt="Harry Potter and the Half-Blood Prince"
           />
         </div>
 
