--- a/series.html
+++ b/series.html
@@ -84,6 +84,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#nobody')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/Nobody.mp4" controls="true"></video>
@@ -133,7 +134,12 @@
           <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
-            <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#raya')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/raya.mp4" controls="true"></video>
               <div class="movie-popup-text">
@@ -181,7 +187,12 @@
           <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
-            <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#sas')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
               <div class="movie-popup-text">
@@ -233,6 +244,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#takeback')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/takeback.mp4" controls="true"></video>
@@ -283,6 +295,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#redneg')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
@@ -334,6 +347,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#thunderforce')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
@@ -386,6 +400,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#triggerpoint')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/triggerpoint.mp4" controls="true"></video>
@@ -436,6 +451,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#vanquish')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/vanquish.mp4" controls="true"></video>
@@ -496,6 +512,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#vicious')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/vicious.mp4" controls="true"></video>
@@ -547,6 +564,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#godzilla')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/godzilla.mp4" controls="true"></video>
@@ -599,6 +617,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#mortalkombat')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/mortalkombat.mp4" controls="true"></video>
@@ -647,7 +666,12 @@
           <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
-            <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#raya')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/raya.mp4" controls="true"></video>
             </div>
@@ -663,7 +687,12 @@
           <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
-            <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#sas')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
             </div>
@@ -683,6 +712,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#takeback')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/takeback.mp4" controls="true"></video>
@@ -703,6 +733,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#redneg')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
@@ -723,6 +754,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#thunderforce')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
@@ -748,7 +780,12 @@
           <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
-            <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#sas')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
             </div>
@@ -768,6 +805,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#takeback')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/takeback.mp4" controls="true"></video>
@@ -788,6 +826,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#redneg')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
@@ -808,6 +847,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#thunderforce')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
@@ -828,6 +868,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#triggerpoint')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/triggerpoint.mp4" controls="true"></video>
@@ -848,6 +889,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#vanquish')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/vanquish.mp4" controls="true"></video>
@@ -868,6 +910,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#redneg')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
@@ -888,6 +931,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#thunderforce')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
@@ -917,6 +961,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#godzilla')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/godzilla.mp4" controls="true"></video>
@@ -937,6 +982,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#mortalkombat')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/mortalkombat.mp4" controls="true"></video>
@@ -953,7 +999,12 @@
           <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
-            <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#raya')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/raya.mp4" controls="true"></video>
             </div>
@@ -969,7 +1020,12 @@
           <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
-            <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#sas')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
             </div>
@@ -989,6 +1045,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#takeback')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/takeback.mp4" controls="true"></video>
@@ -1009,6 +1066,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#redneg')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/redneg.mp4" controls="true"></video>
@@ -1029,6 +1087,7 @@
               class="close"
               src="img/cancel.png"
               onclick="toggle('#thunderforce')"
+              alt="close-button"
             />
             <div class="popup-wrapper">
               <video src="videos/thunderforce.mp4" controls="true"></video>
@@ -1045,7 +1104,12 @@
           <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
-            <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
+            <img
+              class="close"
+              src="img/cancel.png"
+              onclick="toggle('#sas')"
+              alt="close-button"
+            />
             <div class="popup-wrapper">
               <video src="videos/sas.mp4" controls="true"></video>
             </div>
